<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/main_knapp_layout_padding_side"
        android:paddingRight="@dimen/main_knapp_layout_padding_side"
        android:paddingTop="@dimen/main_notice_layout_padding"
        android:paddingBottom="@dimen/main_notice_layout_padding"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_off_white"
            android:text="@string/fnametext"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:inputType="textCapWords"
            android:id="@+id/fname"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/visperson_textview_topmargin"
            android:textColor="@color/text_off_white"
            android:text="@string/lnametext"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:inputType="textCapWords"
            android:id="@+id/lname"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/visperson_textview_topmargin"
            android:textColor="@color/text_off_white"
            android:text="@string/phonetext"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:inputType="phone"
            android:digits="1234567890+"
            android:id="@+id/phone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/visperson_textview_topmargin"
            android:textColor="@color/text_off_white"
            android:text="@string/bdaytext"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentdob"
            android:textColor="@color/text_white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/visperson_textview_topmargin"
            android:textColor="@color/text_off_white"
            android:text="@string/messagetext"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:inputType="textMultiLine"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/message"

            />




    </LinearLayout>

</ScrollView>